# filemanager-ai

./: .gitignore  README.md  ROADMAP.md  ai.py  app.py  config.py  main.py  operations.py  pyproject.toml  start.bat  test_all.py
.github/workflows/: ci.yml
PR_RELEASE/: PR_strategy.md  checklist.md  files.md
