[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filemanager-ai"
version = "0.1.0"
description = "CLI файловый менеджер с AI-помощником"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40",
    "httpx>=0.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["filemanager"]
